force-app/main/default/objects/ServicesReceived__c/ServicesReceived__c.object-meta.xml
<CustomObject>
    <label>Services Received</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Services Received</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Received</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>