force-app/main/default/objects/ServicesReceived__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WD Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Services Received</relationshipLabel>
    <relationshipName>Services_Received</relationshipName>
    <type>Lookup</type>
</CustomField>