force-app/main/default/objects/ServicesReceived__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Rig Move</fullName>
            </value>
            <value>
                <fullName>SBWC</fullName>
            </value>
            <value>
                <fullName>SBWOC</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Inspection/PMS</fullName>
            </value>
            <value>
                <fullName>Crew Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>