force-app/main/default/objects/ServicesReceived__c/fields/CDR__c.field-meta.xml
<CustomField>
    <fullName>CDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDR#</label>
    <referenceTo>Camp_Daily_Report__c</referenceTo>
    <relationshipName>Services_Received</relationshipName>
    <type>Lookup</type>
</CustomField>