force-app/main/default/objects/ServicesReceived__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services Received</relationshipLabel>
    <relationshipName>Services_Received</relationshipName>
    <type>Lookup</type>
</CustomField>