force-app/main/default/objects/ServicesReceived__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
            <value>
                <fullName>Water Tanker (Single)</fullName>
            </value>
            <value>
                <fullName>Bed Truck 30T</fullName>
            </value>
            <value>
                <fullName>Bed Truck 30T + 1 Trailer</fullName>
            </value>
            <value>
                <fullName>Bed Truck 30T + 2 Trailers</fullName>
            </value>
            <value>
                <fullName>Float</fullName>
            </value>
            <value>
                <fullName>Float + Dolly</fullName>
            </value>
            <value>
                <fullName>Prime Mover</fullName>
            </value>
            <value>
                <fullName>Prime Mover + Dolly</fullName>
            </value>
            <value>
                <fullName>Hot Shot</fullName>
            </value>
            <value>
                <fullName>Escort Driver</fullName>
            </value>
            <value>
                <fullName>Loader</fullName>
            </value>
            <value>
                <fullName>Fridge Van</fullName>
            </value>
            <value>
                <fullName>Fuel Tanker (Single)</fullName>
            </value>
            <value>
                <fullName>Fuel Tanker (B Double)</fullName>
            </value>
            <value>
                <fullName>Vac Tanker</fullName>
            </value>
            <value>
                <fullName>Truck Pusher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>