force-app/main/default/objects/ServicesReceived__c/fields/Description_of_Operations__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Operations__c</fullName>
    <label>Description of Operations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>