force-app/main/default/objects/ServicesReceived__c/fields/DR__c.field-meta.xml
<CustomField>
    <fullName>DR__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DR#</label>
    <referenceTo>WD_Report__c</referenceTo>
    <relationshipLabel>Services Received</relationshipLabel>
    <relationshipName>Services_Received</relationshipName>
    <type>Lookup</type>
</CustomField>