force-app/main/default/objects/ServicesReceived__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Services Received</relationshipLabel>
    <relationshipName>Services_Received</relationshipName>
    <type>Lookup</type>
</CustomField>