force-app/main/default/objects/ServicesReceived__c/fields/Fault_Reported__c.field-meta.xml
<CustomField>
    <fullName>Fault_Reported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fault Reported</label>
    <type>Checkbox</type>
</CustomField>