force-app/main/default/objects/ServicesReceived__c/fields/Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>Finish_Time__c</fullName>
    <label>Finish Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>