force-app/main/default/objects/ServicesReceived__c/fields/HMI_Focus__c.field-meta.xml
<CustomField>
    <fullName>HMI_Focus__c</fullName>
    <label>HMI Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hoisting/Lifting</fullName>
            </value>
            <value>
                <fullName>Pressure/Fluid Movement</fullName>
            </value>
            <value>
                <fullName>Moving/Rotating Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>