force-app/main/default/objects/ServicesReceived__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inv#</label>
    <type>Checkbox</type>
</CustomField>