force-app/main/default/objects/ServicesReceived__c/fields/Invoicing_Information__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Information__c</fullName>
    <label>Invoicing Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idle</fullName>
                <default>true</default>
                <label>Idle</label>
            </value>
            <value>
                <fullName>Lump Sum (Rig Inclusive)</fullName>
            </value>
            <value>
                <fullName>Quoted Price - SO Required</fullName>
            </value>
            <value>
                <fullName>Hrly Rates - SO/TD Required</fullName>
            </value>
            <value>
                <fullName>Km Rates - SO/TD Required</fullName>
            </value>
            <value>
                <fullName>WD Internal</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>