force-app/main/default/objects/ServicesReceived__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Services_Received__c</referenceTo>
    <relationshipName>Services_Received</relationshipName>
    <type>Lookup</type>
</CustomField>