force-app/main/default/objects/ServicesReceived__c/fields/Item_Rate__c.field-meta.xml
<CustomField>
    <fullName>Item_Rate__c</fullName>
    <label>Item Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>