force-app/main/default/objects/ServicesReceived__c/fields/Item_Rate_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Rate_Category__c</fullName>
    <inlineHelpText>This is the type that the rate is managed by e.g. hourly, daily or lump sum rate</inlineHelpText>
    <label>Item Rate Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day Rate</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Lump Sum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>