force-app/main/default/objects/ServicesReceived__c/fields/Item_Rate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Item_Rate_Formula__c</fullName>
    <formula>Item__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Rate Formula</label>
    <type>Text</type>
</CustomField>