force-app/main/default/objects/ServicesReceived__c/fields/Item_total__c.field-meta.xml
<CustomField>
    <fullName>Item_total__c</fullName>
    <inlineHelpText>Total Hours, Number of Days, Lump Sum  (Number in unit will multiply by rate to get total cost of item.</inlineHelpText>
    <label>Item Total</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>