force-app/main/default/objects/ServicesReceived__c/fields/JO__c.field-meta.xml
<CustomField>
    <fullName>JO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JO</label>
    <referenceTo>WD_Report__c</referenceTo>
    <relationshipLabel>Services Received (JO)</relationshipLabel>
    <relationshipName>Services_Received1</relationshipName>
    <type>Lookup</type>
</CustomField>