force-app/main/default/objects/ServicesReceived__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order #</label>
    <referenceTo>Job_Orders__c</referenceTo>
    <relationshipLabel>Services Received</relationshipLabel>
    <relationshipName>Services_Received</relationshipName>
    <type>Lookup</type>
</CustomField>