force-app/main/default/objects/ServicesReceived__c/fields/Odometer_as_Prestart__c.field-meta.xml
<CustomField>
    <fullName>Odometer_as_Prestart__c</fullName>
    <label>Odometer as Prestart</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>