force-app/main/default/objects/ServicesReceived__c/fields/Operating_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hrs__c</fullName>
    <label>Operating Hrs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>