force-app/main/default/objects/ServicesReceived__c/fields/Pre_Start_Received__c.field-meta.xml
<CustomField>
    <fullName>Pre_Start_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Start Received</label>
    <type>Checkbox</type>
</CustomField>