force-app/main/default/objects/ServicesReceived__c/fields/Pre_start_Required__c.field-meta.xml
<CustomField>
    <fullName>Pre_start_Required__c</fullName>
    <label>Pre-start Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>