force-app/main/default/objects/ServicesReceived__c/fields/Prestart__c.field-meta.xml
<CustomField>
    <fullName>Prestart__c</fullName>
    <label>Prestart #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>