force-app/main/default/objects/ServicesReceived__c/fields/Safety_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Safety_Discussion__c</fullName>
    <inlineHelpText>Add brief details or comments explaining what occurred in Safety talk.  Should be in line with the operations that occurred at the time.</inlineHelpText>
    <label>Details/Comments</label>
    <type>TextArea</type>
</CustomField>