force-app/main/default/objects/ServicesReceived__c/fields/Safety_Talk__c.field-meta.xml
<CustomField>
    <fullName>Safety_Talk__c</fullName>
    <label>Safety Talk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SOP Review</fullName>
            </value>
            <value>
                <fullName>PTW</fullName>
            </value>
            <value>
                <fullName>TBM</fullName>
            </value>
            <value>
                <fullName>JHA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>