force-app/main/default/objects/ServicesReceived__c/fields/Signed_Truck_Dockets_Required__c.field-meta.xml
<CustomField>
    <fullName>Signed_Truck_Dockets_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Truck Dockets Required</label>
    <type>Checkbox</type>
</CustomField>