force-app/main/default/objects/ServicesReceived__c/fields/SO__c.field-meta.xml
<CustomField>
    <fullName>SO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SO</label>
    <referenceTo>Job_Orders__c</referenceTo>
    <relationshipLabel>Services Received (SO)</relationshipLabel>
    <relationshipName>Services_Received1</relationshipName>
    <type>Lookup</type>
</CustomField>