force-app/main/default/objects/ServicesReceived__c/fields/Start_time__c.field-meta.xml
<CustomField>
    <fullName>Start_time__c</fullName>
    <inlineHelpText>Use 24hr time (round to nearest 15 min)</inlineHelpText>
    <label>Start time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>