force-app/main/default/objects/ServicesReceived__c/fields/TD__c.field-meta.xml
<CustomField>
    <fullName>TD__c</fullName>
    <label>TD#</label>
    <length>10</length>
    <type>Text</type>
</CustomField>