force-app/main/default/objects/ServicesReceived__c/fields/TD_Received__c.field-meta.xml
<CustomField>
    <fullName>TD_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TD Received</label>
    <type>Checkbox</type>
</CustomField>