force-app/main/default/objects/ServicesReceived__c/fields/Total_Cost_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Formula__c</fullName>
    <formula>(Item_total__c * Value(Item_Rate_Formula__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>