force-app/main/default/objects/ServicesReceived__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Services Received</relationshipLabel>
    <relationshipName>Services_Received</relationshipName>
    <type>Lookup</type>
</CustomField>