force-app/main/default/objects/ServicesReceived__c/recordTypes/Hire_Additional.recordType-meta.xml
<RecordType>
    <fullName>Hire_Additional</fullName>
    <active>true</active>
    <label>Hire/Additional</label>
</RecordType>