force-app/main/default/objects/ServicesReceived__c/recordTypes/hire_item.recordType-meta.xml
<RecordType>
    <fullName>hire_item</fullName>
    <active>true</active>
    <label>Hire Items Only</label>
</RecordType>