force-app/main/default/objects/ServicesReceived__c/recordTypes/Operations_Hourly.recordType-meta.xml
<RecordType>
    <fullName>Operations_Hourly</fullName>
    <active>true</active>
    <label>Operations</label>
</RecordType>