force-app/main/default/objects/ServicesReceived__c/recordTypes/Transport_Service.recordType-meta.xml
<RecordType>
    <fullName>Transport_Service</fullName>
    <active>true</active>
    <label>Transport Service</label>
</RecordType>