force-app/main/default/objects/ServicesReceived__c/recordTypes/Transport_services.recordType-meta.xml
<RecordType>
    <fullName>Transport_services</fullName>
    <active>true</active>
    <label>Transport Work</label>
</RecordType>