force-app/main/default/objects/ServicesReceived__c/listViews/prestarts_RC4.listView-meta.xml
<ListView>
    <fullName>prestarts_RC4</fullName>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Description_of_Operations__c</columns>
    <columns>Invoicing_Information__c</columns>
    <columns>Pre_start_Required__c</columns>
    <columns>Prestart__c</columns>
    <columns>Pre_Start_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:365</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServicesReceived__c.Transport_services</value>
    </filters>
    <filters>
        <field>Asset__c</field>
        <operation>equals</operation>
        <value>Carrier - 0238</value>
    </filters>
    <label>Prestarts - Rig Carrier 4</label>
    <sharedTo>
        <group>Transport</group>
    </sharedTo>
</ListView>